--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,24 @@ services:
     container_name: nest-mysql-db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 1234        
-      MYSQL_DATABASE: aiot                
-      MYSQL_USER: admin                 
-      MYSQL_PASSWORD: admin      
+      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_DATABASE: aiot
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin
     ports:
       - '3308:3306'
     volumes:
       - mysql_data:/var/lib/mysql
 
+  redis:
+    image: redis:7
+    container_name: nest-redis
+    restart: always
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+
 volumes:
   mysql_data:
+  redis_data:
